--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/angular": "^5.3.0",
     "@ionic/storage": "^2.1.3",
+    "cordova-android": "9.1.0",
     "cordova-res": "^0.15.3",
     "ionic-angular": "^3.9.10",
     "ionicons": "3.0.0",
@@ -41,7 +42,6 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.4",
-    "cordova-android": "^9.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
