--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic/angular": "^5.3.0",
     "@ionic/storage": "^2.1.3",
     "cordova-android": "9.1.0",
+    "cordova-ios": "6.2.0",
     "cordova-res": "^0.15.3",
     "ionic-angular": "^3.9.10",
     "ionicons": "3.0.0",
@@ -66,7 +67,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
