--- a/package.json
+++ b/package.json
@@ -31,18 +31,21 @@
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/angular": "^5.3.0",
     "@ionic/storage": "^2.1.3",
-    "cordova-android": "9.1.0",
+    "cordova": "^11.0.0",
     "cordova-ios": "6.2.0",
-    "cordova-res": "^0.15.3",
+    "cordova-res": "^0.15.4",
     "ionic-angular": "^3.9.10",
     "ionicons": "3.0.0",
     "node": "^6.17.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
+    "to": "^0.2.9",
+    "update": "^0.7.4",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.4",
+    "cordova-android": "^8.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
@@ -67,8 +70,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
